--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ header {
   width: 100%;
   height: 700px;
   max-height: 700px;
-  background: url(/images/bg-intro-desktop.svg);
+  background: url(../images/bg-intro-desktop.svg);
   background-repeat: no-repeat;
   background-position: 40px -145px;
   background-size: cover;
