--- a/css/queries.css
+++ b/css/queries.css
@@ -113,7 +113,7 @@
     max-width: 1500px;
     height: 900px;
     max-height: 1100px;
-    background: url(/images/bg-intro-desktop.svg);
+    background: url(../images/bg-intro-desktop.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
